# AI-Clothing-Assistant

./: .gitattributes  .gitignore  README.md  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml
clothing_store_assistant/: README.md  model_download.py  pyproject.toml  sampled_fashion_10k_with_json.csv  vectorstore_maker.py
clothing_store_assistant/chroma_store_text/: chroma.sqlite3
clothing_store_assistant/chroma_store_text/558dbb9c-cfd6-4783-b785-8d3e719880f0/: index_metadata.pickle
clothing_store_assistant/chroma_store_text/7f0ad4c0-cd24-4ce4-bd7b-47e5b259208b/: index_metadata.pickle
clothing_store_assistant/models/all-mpnet-base-v2/: config_sentence_transformers.json
clothing_store_assistant/src/clothing_store_assistant/crews/ecommerce_crew/: chat_rag_crew.py  company_faqs.txt  crew.py  search_results_report.md
clothing_store_assistant/src/clothing_store_assistant/crews/ecommerce_crew/config/: agents.yaml  tasks.yaml
clothing_store_assistant/src/clothing_store_assistant/crews/ecommerce_crew/db/: chroma.sqlite3
clothing_store_assistant/src/clothing_store_assistant/tools/: combined_query_tool.py  text_query_tool.py  vision_tool.py
db/: chroma.sqlite3
static/: styles.css
