[project]
name = "clothing_store_assistant"
version = "0.1.0"
description = "clothing-store-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
]

[project.scripts]
kickoff = "clothing_store_assistant.main:kickoff"
run_crew = "clothing_store_assistant.main:kickoff"
plot = "clothing_store_assistant.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
